# jjws

./: Cargo.toml  README.md  scratch
completions/: jjws.fish
docs/superpowers/plans/: 2026-03-29-random-workspace-names.md
docs/superpowers/specs/: 2026-03-29-random-workspace-names-design.md
src/: ghostty.rs  ignored.rs  jj.rs  lib.rs  main.rs  names.rs
