[package]
name = "jjws"
version = "0.3.0"
edition = "2024"
description = "Manage jj workspaces with a few local conveniences"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "wrap_help", "color"] }
dirs = "6.0"
dunce = "1.0"
gethostname = "1.1"
jj-lib = { git = "https://github.com/jj-vcs/jj.git", tag = "v0.37.0" }
pollster = "0.4"

[dev-dependencies]
tempfile = "3.27"
