[package]
name = "jjws"
version = "0.5.2"
edition = "2024"
description = "Manage jj workspaces with a few local conveniences"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "wrap_help", "color"] }
colored = "3.1"
dirs = "6.0"
dunce = "1.0"
gethostname = "1.1"
jiff = "0.2"
jj-lib = { git = "https://github.com/jj-vcs/jj.git", tag = "v0.40.0" }
tokio = { version = "1.50", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
